fix: select wasn't controlled. Add fullwidth props. Gap instead margin

--- a/src/components/ui/pagination/pagination.module.scss
+++ b/src/components/ui/pagination/pagination.module.scss
@@ -57,5 +57,5 @@
 }
 
 .select {
-  padding: 0.01rem 0.77rem !important;
+  padding: 0.01rem 0;
 }
